# opencode-starter

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  dynamic-skills.jsonc  justfile  mcps-template.jsonc  mcps.jsonc  opencode.jsonc  package-lock.json  package.json  skills-lock.json  tsconfig.json  tui.json
.opencode/: opencode.jsonc  package-lock.json
agents/: plan.md  research-academic.md  research-community.md  research-synthesizer.md  research-validator.md  research-web.md  research.md  rust-implementer.md  rust-review-worker.md  rust-reviewer.md  search.md  skill-creator-analyzer.md  skill-creator-comparator.md  skill-creator-grader.md
crates/opencode-native-memory/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs
crates/opencode-native-memory/src/: config.rs  engine.rs  lib.rs  main.rs  model.rs  state.rs
crates/opencode-native-memory/tests/: e2e.rs
docker/: Dockerfile
harness/: README.md  team.schema.json
instructions/: agent-orchestration.md  attachment-path-resolution.md  codebase-memory.md  fish-shell.md  github-code-search.md  harness-skill-mcp.md  javascript-typescript.md  parallel-agents.md  python-scripting.md  senior-rust-developer.md  senior-rust-engineer.md  tool-routing.md
plugins/: README.md  crawlberg.js  dynamic-skills.js  fish-shell.ts  grep.ts  harness-teams.ts  html-to-markdown.js  native-diagnostics.ts  opencode-memory.ts  tree-sitter-language-pack.js  xberg.js
prompts/: compaction.txt
qdrant_config/: production.yaml
scripts/: build-native-memory.ts  harness-opencode.fish  (+6 more)
(+351 files in other folders)
