[package]
name = "opencode-native-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native zvec-backed project memory sidecar for OpenCode plugins"

[dependencies]
anyhow = "1.0"
fastembed = { version = "=5.17.3", default-features = false, features = [
  "hf-hub-rustls-tls",
  "ort-download-binaries-rustls-tls",
] }
fs2 = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
zvec-rust = "=0.5.1"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
